# csa-etl-plugin

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  run_etl_analyzer.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
cmake/: AddCommonLibraryDirectory.cmake
libraries/: CMakeLists.txt
libraries/EtlCheckerlib/: CMakeLists.txt
libraries/EtlCheckerlib/source/: EtlChecker.cxx
libraries/EtlCheckerlib/tests/: test_access_checker.cxx  test_discarded_expected_checker.cxx  test_discarded_optional_checker.cxx  test_etl_access.cxx  test_etl_mocks.h
libraries/corelib/: CMakeLists.txt
libraries/corelib/mocks/: core_mock.cpp  core_mock.hpp
libraries/corelib/tests/: core_test.cpp
libraries/interfacelib/: CMakeLists.txt
libraries/interfacelib/include/: InterfaceLib.hpp
libraries/interfacelib/mocks/: InterfaceLibMock.cpp  InterfaceLibMock.hpp
libraries/interfacelib/tests/: InterfaceLibTest.cpp
libraries/utilitylib/: CMakeLists.txt
libraries/utilitylib/mocks/: utility_mock.cpp  utility_mock.hpp
libraries/utilitylib/tests/: utility_test.cpp
